--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-        <title> Neeta : Music Production | Composition | Sound Designer  </title>
+        <title> Neeta : Music Production | Composition | Sound Designer yes </title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="Styling/main.css">
