active class for active pill

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         </div>
         <div class="col-lg-6 col-md-4 col-sm-7 collapse navbar-collapse" id="bs-example-navbar-collapse1">
           <ul class="nav nav-pills head-menu hidden-sm hidden-xs">
-            <li><a href="about.html" class="hvr-push"> about</a></li>
+            <li class="active"><a href="about.html" class="hvr-push"> about</a></li>
             <li><a href="showreel.html" class="hvr-push">showreel</a></li>
             <li><a href="contact.html" class="hvr-push">contact </a></li>
           </ul>
