adding active states to navigation pills

--- a/showreel.html
+++ b/showreel.html
@@ -20,7 +20,7 @@
         <div class="col-lg-6 col-md-4 col-sm-7 collapse navbar-collapse" id="bs-example-navbar-collapse1">
           <ul class="nav nav-pills head-menu hidden-sm hidden-xs">
             <li><a href="about.html" class="hvr-push"> about</a></li>
-            <li><a href="showreel.html" class="hvr-push">showreel</a></li>
+            <li class="active"><a href="showreel.html">showreel</a></li>
             <li><a href="contact.html" class="hvr-push">contact </a></li>
           </ul>
         </div>
@@ -55,6 +55,28 @@
                 <div class="example">
                   <div class="title">
                     <div id="name">
+                      MERAQI - CONTOURS
+                    </div>
+                    <div id="labels">
+                        <span class="label label-default">Composition</span>
+                        <span class="label label-default">Production</span>
+                        <span class="label label-default">Mixing</span>
+                        <span class="label label-default">Keys</span>
+                        <span class="label label-default">Vocals</span>
+                    </div>
+                  </div>
+                  <div class="subtitle">
+                    I am lead vocalist, producer &amp; synth player in the band Meraqi.
+                  </div>
+                      <div class="audio">
+                        <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
+                        "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215826112&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
+                        </iframe>
+                      </div>
+                </div>
+                <div class="example">
+                  <div class="title">
+                    <div id="name">
                       FREAKYLOOPS - HYBRID ELECTRONICA
                     </div>
                     <div id="labels">
@@ -72,28 +94,6 @@
                       <div class="audio">
                         <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
                         "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/292258996%3Fsecret_token%3Ds-lb2H1&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
-                        </iframe>
-                      </div>
-                </div>
-                <div class="example">
-                  <div class="title">
-                    <div id="name">
-                      MERAQI - CONTOURS
-                    </div>
-                    <div id="labels">
-                        <span class="label label-default">Composition</span>
-                        <span class="label label-default">Production</span>
-                        <span class="label label-default">Mixing</span>
-                        <span class="label label-default">Keys</span>
-                        <span class="label label-default">Vocals</span>
-                    </div>
-                  </div>
-                  <div class="subtitle">
-                    I am lead vocalist, producer &amp; synth player in the band Meraqi.
-                  </div>
-                      <div class="audio">
-                        <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
-                        "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215826112&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
                         </iframe>
                       </div>
                 </div>
@@ -121,26 +121,6 @@
                 <div class="example">
                   <div class="title">
                     <div id="name">
-                      BOE HUNTRESS - DAY BECOMES NIGHT
-                    </div>
-                    <div id="labels">
-                        <span class="label label-default">Mixing</span>
-                        <span class="label label-default">Master</span>
-                        <span class="label label-default">Additional Production</span>
-                    </div>
-                  </div>
-                  <div class="subtitle">
-                    Mix and master for songwriter/producer Boe Huntress
-                  </div>
-                      <div class="audio">
-                        <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
-                        "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/371325923&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
-                        </iframe>
-                      </div>
-                </div>
-                <div class="example">
-                  <div class="title">
-                    <div id="name">
                       NOVATION - SOAR
                     </div>
                     <div id="labels">
@@ -157,6 +137,26 @@
                       <div class="audio">
                         <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
                         "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/296011605&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
+                        </iframe>
+                      </div>
+                </div>
+                <div class="example">
+                  <div class="title">
+                    <div id="name">
+                      BOE HUNTRESS - DAY BECOMES NIGHT
+                    </div>
+                    <div id="labels">
+                        <span class="label label-default">Mixing</span>
+                        <span class="label label-default">Master</span>
+                        <span class="label label-default">Additional Production</span>
+                    </div>
+                  </div>
+                  <div class="subtitle">
+                    Mix and master for songwriter/producer Boe Huntress
+                  </div>
+                      <div class="audio">
+                        <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
+                        "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/371325923&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
                         </iframe>
                       </div>
                 </div>
