--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
           <ul class="nav nav-pills head-menu hidden-sm hidden-xs">
             <li><a href="about.html" class="hvr-push"> about</a></li>
             <li><a href="showreel.html" class="hvr-push">showreel</a></li>
-            <li><a href="contact.html" class="hvr-push">contact </a></li>
+            <li class="active"><a href="contact.html">contact </a></li>
           </ul>
         </div>
               <div class="socials">
