--- a/showreel.html
+++ b/showreel.html
@@ -2,7 +2,9 @@
 <html>
 <head>
       <title> Neeta : Music Production | Composition | Sound Designer  </title>
-      <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+      <meta name="description" content="Freelance Music Producer, Mix Engineer & Keys/Vocalist based in London">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+      <meta property="og:image" content="Assets/farmfest.jpg"/>
       <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="Styling/main.css">
       <link rel="stylesheet" href="Styling/navigation.css">
@@ -55,28 +57,6 @@
                 <div class="example">
                   <div class="title">
                     <div id="name">
-                      MERAQI - CONTOURS
-                    </div>
-                    <div id="labels">
-                        <span class="label label-default">Composition</span>
-                        <span class="label label-default">Production</span>
-                        <span class="label label-default">Mixing</span>
-                        <span class="label label-default">Keys</span>
-                        <span class="label label-default">Vocals</span>
-                    </div>
-                  </div>
-                  <div class="subtitle">
-                    I am lead vocalist, producer &amp; synth player in the band Meraqi.
-                  </div>
-                      <div class="audio">
-                        <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
-                        "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215826112&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
-                        </iframe>
-                      </div>
-                </div>
-                <div class="example">
-                  <div class="title">
-                    <div id="name">
                       FREAKYLOOPS - HYBRID ELECTRONICA
                     </div>
                     <div id="labels">
@@ -94,6 +74,28 @@
                       <div class="audio">
                         <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
                         "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/292258996%3Fsecret_token%3Ds-lb2H1&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
+                        </iframe>
+                      </div>
+                </div>
+                <div class="example">
+                  <div class="title">
+                    <div id="name">
+                      MERAQI - CONTOURS
+                    </div>
+                    <div id="labels">
+                        <span class="label label-default">Composition</span>
+                        <span class="label label-default">Production</span>
+                        <span class="label label-default">Mixing</span>
+                        <span class="label label-default">Keys</span>
+                        <span class="label label-default">Vocals</span>
+                    </div>
+                  </div>
+                  <div class="subtitle">
+                    I am lead vocalist, producer &amp; synth player in the band Meraqi.
+                  </div>
+                      <div class="audio">
+                        <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
+                        "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215826112&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
                         </iframe>
                       </div>
                 </div>
@@ -121,6 +123,26 @@
                 <div class="example">
                   <div class="title">
                     <div id="name">
+                      BOE HUNTRESS - DAY BECOMES NIGHT
+                    </div>
+                    <div id="labels">
+                        <span class="label label-default">Mixing</span>
+                        <span class="label label-default">Master</span>
+                        <span class="label label-default">Additional Production</span>
+                    </div>
+                  </div>
+                  <div class="subtitle">
+                    Mix and master for songwriter/producer Boe Huntress
+                  </div>
+                      <div class="audio">
+                        <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
+                        "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/371325923&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
+                        </iframe>
+                      </div>
+                </div>
+                <div class="example">
+                  <div class="title">
+                    <div id="name">
                       NOVATION - SOAR
                     </div>
                     <div id="labels">
@@ -137,26 +159,6 @@
                       <div class="audio">
                         <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
                         "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/296011605&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
-                        </iframe>
-                      </div>
-                </div>
-                <div class="example">
-                  <div class="title">
-                    <div id="name">
-                      BOE HUNTRESS - DAY BECOMES NIGHT
-                    </div>
-                    <div id="labels">
-                        <span class="label label-default">Mixing</span>
-                        <span class="label label-default">Master</span>
-                        <span class="label label-default">Additional Production</span>
-                    </div>
-                  </div>
-                  <div class="subtitle">
-                    Mix and master for songwriter/producer Boe Huntress
-                  </div>
-                      <div class="audio">
-                        <iframe class="player" width="100%" height="110px" scrolling="no" frameborder="no" src=
-                        "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/371325923&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
                         </iframe>
                       </div>
                 </div>
