--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,9 @@
 <html>
   <head>
         <title> Neeta : Music Production | Composition | Sound Designer  </title>
-        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+        <meta name="description" content="Freelance Music Producer, Mix Engineer & Keys/Vocalist based in London">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta property="og:image" content="Assets/farmfest.jpg"/>
         <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="Styling/main.css">
         <link rel="stylesheet" href="Styling/navigation.css">
